# sparrow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  ci.yml
examples/: before_after_examples.py  compose_examples.py  reflex_examples.py  result_examples.py  wrap_examples.py
sparrow/: __init__.py
sparrow/datatype/: __init__.py  maybe.py  result.py
sparrow/decorator/: before_after.py  compose.py  currify.py  reflex.py  when.py  wrap.py
sparrow/function/: when.py
sparrow/kind/: __init__.py  applicative.py  bifunctor.py  functor.py  monad.py
src/: __init__.py  before_after.py  when.py
src/data/: bifunctor.py  functor.py  maybe.py  result.py
src/datatype/: __init__.py  applicative.py  functor.py  maybe.py  monad.py  result.py
src/decorator/: compose.py  currify.py  when.py  wrap.py
src/function/: when.py
src/kind/: __init__.py  applicative.py
src/sparrow/: __init__.py
src/sparrow/datatype/: maybe.py  result.py
src/sparrow/decorator/: when.py  wrap.py
src/sparrow/function/: when.py
src/sparrow/kind/: applicative.py  bifunctor.py  functor.py  monad.py
tests/: base_tests.py  before_after_test.py  compose_test.py  reflex_test.py  when_test.py
tests/data/: result_test.py
tests/datatype/: maybe_test.py  result_test.py
tests/datatype/data/: result_test.py
tests/decorator/: before_after_test.py  compose_test.py  log_test.py  reflex_test.py  when_test.py  wrap_test.py
tests/function/: when_test.py
