[tool.poetry]
name = "sparrow"
version = "0.1.0"
description = "A library with a collection of decorators and functions to functional programming in Python"
authors = ["Fabián Vega <i@example.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/FabianVegaA/sparrow"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: BSD 3-Clause License",
]
packages = [
    { include = "sparrow" },
    { include = "sparrow/function" },
    { include = "sparrow/decorator" },
    { include = "sparrow/datatype" },
    { include = "sparrow/kind" },
]
keywords = ["functional", "programming", "decorator", "sparrow", "library"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.poetry.group.format.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[tool.poetry.group.linter.dependencies]
ruff = "^0.0.254"

[tool.poetry.group.type.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
